--- a/three.js/project/package.json
+++ b/three.js/project/package.json
@@ -10,23 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/cannon": "^6.6.0",
-    "@react-three/drei": "^9.56.6",
-    "@react-three/fiber": "^8.13.7",
     "lucide-react": "^0.344.0",
-    "matter-js": "^0.20.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "three": "^0.155.0",
-    "three-stdlib": "^2.31.0",
-    "zustand": "^5.0.4"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
-    "@types/matter-js": "^0.19.8",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@types/three": "^0.176.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
