--- a/strapi/apple-template/package.json
+++ b/strapi/apple-template/package.json
@@ -11,16 +11,18 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
+    "qs": "^6.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.22.3",
     "react-intersection-observer": "^9.8.1",
-    "framer-motion": "^11.0.8"
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/qs": "^6.14.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
