--- a/strapi/portfolio-strapi/package.json
+++ b/strapi/portfolio-strapi/package.json
@@ -24,6 +24,7 @@
     "fs-extra": "^10.0.0",
     "mime-types": "^2.1.27",
     "pg": "^8.16.0",
+    "qs": "^6.14.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/qs": "^6.14.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "typescript": "^5"
