--- a/strapi/apple-template/package.json
+++ b/strapi/apple-template/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.8.1",
     "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
