refactor: enhance user authentication and registration flow with JWT and bcrypt integration

--- a/chaiwalanodejs/backend/.env
+++ b/chaiwalanodejs/backend/.env
@@ -1,6 +1,6 @@
 PORT=8000
 CORS_ORIGIN=*
-MONGO_URI=mongodb+srv://aakash01:Aakash@cluster0.lxfzg3r.mongodb.net/
+MONGO_URI=mongodb+srv://aakash01:aakash@cluster0.lxfzg3r.mongodb.net
 ACCESS_TOKEN_SECRET=chai-aur-code
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=chai-aur-backend
