--- a/strapi/apple-template/package.json
+++ b/strapi/apple-template/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
