--- a/strapi/apple-template/package.json
+++ b/strapi/apple-template/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.8.1",
     "react-markdown": "^9.0.1",
+    "react-microsoft-clarity": "^2.0.0",
     "react-router-dom": "^6.22.3",
     "zustand": "^5.0.5"
   },
