--- a/script/second-attempt-script-using-sh/templates/glass_liquid/package.json
+++ b/script/second-attempt-script-using-sh/templates/glass_liquid/package.json
@@ -4,20 +4,29 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.2",
+    "@tailwindcss/typography": "^0.5.16",
+    "axios": "^1.6.7",
+    "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
+    "qs": "^6.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "zustand": "^4.4.7"
+    "react-intersection-observer": "^9.8.1",
+    "react-markdown": "^9.0.1",
+    "react-microsoft-clarity": "^2.0.0",
+    "react-router-dom": "^6.22.3",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/node": "^22.15.29",
+    "@types/qs": "^6.14.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
